--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>L</title>
   </head>
   <body>
-    <h1 class=" text-center mt-5 display-4 text-primary">Hello, world! con Github Pages</h1>
+    <h1 class=" text-center mt-5 display-4 text-primary">Luis Enriquez</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
